--- a/v1/gui.css
+++ b/v1/gui.css
@@ -1,5 +1,10 @@
 
 
+:root {
+    --main-color: black;
+}
+
+
 table td {
     padding: 10px;
 }
@@ -23,7 +28,14 @@ a .icon {
     color: white;
     padding: 10px 20px;
     text-decoration: none;
+    cursor: pointer;
 }
+
+
+nav .btn {
+    padding: 0 20px;
+}
+
 
 input, select, textarea {
     width: calc(100% - 40px);
@@ -34,6 +46,22 @@ input, select, textarea {
 
 textarea {
     height: 105px;
+}
+
+/** topmenu **/
+
+.topmenu {
+    margin: 0;
+    background-color: var(--main-color);
+    list-style-image: none;
+    list-style-type: none;
+}
+.topmenu ul {
+    display:none;
+}
+
+.topmenu li:hover > ul {
+    display: block;
 }
 
 /** DROPDOWN **/
@@ -47,11 +75,22 @@ textarea {
     padding: 0px;
     list-style-image: none;
     list-style-type: none;
+    display: inline-block;
 }
 
 .dropdown ul {
     visibility: hidden;
     position: absolute;
+}
+
+.dropdown > li > ul ul {
+    left: 100%;
+    margin-left: -10px;
+    margin-top: -50px;
+}
+
+.dropdown > li {
+    display: inline-block;
 }
 
 /* Show the dropdown menu on hover */
@@ -63,19 +102,55 @@ textarea {
 
 
 /* Links inside the dropdown */
-.dropdown ul a {
+.topmenu a,
+.dropdown a {
     color: white;
-    padding: 12px 16px;
+    line-height: 50px;
     text-decoration: none;
     display: block;
     margin: 0;
     text-transform: none;
+    white-space: nowrap;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown ul a:hover {
+nav a:hover .icon,
+.topmenu a:hover,
+.dropdown  a:hover {
     color: var(--main-color);
     background-color: white;
 }
 /** EOF Dropdown **/
 
+@media (min-width: 1300px) {
+    nav .cp {
+       left: 0;
+        position: absolute;
+    }
+}
+
+@media (max-width:1200px) {
+    .langs {
+        float: right;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+}
+
+nav .toggleMenu {
+    display: inline-block;
+}
+
+.lang_short {
+    display: none;
+}
+
+@media (max-width:600px) {
+    .lang_short {
+        display: block;
+    }
+    .lang_long {
+        display: none;
+    }
+}
