--- a/v1/layout.css
+++ b/v1/layout.css
@@ -42,15 +42,22 @@ header a:hover {
      margin: auto;
  }
 
+/*
 main {
     width: 100vw;
     min-height: calc(100vh - 50px);
     position: absolute;
     top: 0;
     padding-top: 50px;
+} */
+
+main {
+    width: 100vw;
+    height: calc(100vh - 50px);
+    position: fixed;
+    top: 50px;
+    overflow: scroll;
 }
-
-
 table,
 form {
     width: 100%;
@@ -161,3 +168,9 @@ form {
 .tmcn {
     display: inline-block;
 }
+
+.popup {
+    padding: 20px;
+}
+
+
